<resources>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount</string>
    <string name="email">Email</string>
    <string name="cvc_cvv2">CVV</string>
    <string name="phone_number">Phone number</string>
    <string name="pay">Pay</string>
    <string name="secured_by_klasha">Secured by klasha</string>
    <string name="pci_dss_compliant">PCI/DSS Compliant</string>
    <string name="expiration">Expiration date</string>
    <string name="card_number">Card Number</string>
    <string name="defaultCardExpiry">09/29</string>
    <string name="otp">Otp</string>
    <string name="enter">Enter</string>
    <string name="enter_your_one_ntime_password_otp">Enter your OTP</string>
    <string name="otp_icon">Otp Icon</string>
</resources>