<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:descendantFocusability="beforeDescendants"
android:focusableInTouchMode="true"
android:layout_width="match_parent"
android:orientation="vertical"
android:layout_height="wrap_content"
    tools:context=".fragments.card.CardFragment">

<ScrollView
    android:id="@+id/new_card_overall_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/klasha_topLay"
        android:paddingTop="10dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            app:boxStrokeColor = "@color/text_input_stroke_color"
            app:boxBackgroundColor="@null"
            android:layout_width="match_parent"
            android:id="@+id/klasha_amountTil"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:paddingLeft="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:id="@+id/klasha_amountEt"
                android:inputType="numberDecimal"
                android:layout_below="@+id/klasha_card1"
                android:layout_marginBottom="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxStrokeColor = "@color/text_input_stroke_color"
            app:boxBackgroundColor="@null"
            android:layout_width="match_parent"
            android:id="@+id/klasha_emailTil"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:paddingLeft="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/klasha_emailEt"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/klasha_card1"
                android:layout_marginBottom="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/klasha_new_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                app:boxStrokeColor = "@color/text_input_stroke_color"
                app:boxBackgroundColor="@null"
                android:id="@+id/klasha_cardNoTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.klasha.klasha_checkout.custom_views.CreditCardView
                    android:id="@+id/klasha_cardNoTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/card_number" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/klasha_cvvExpLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    app:boxBackgroundColor="@null"
                    app:boxStrokeColor = "@color/text_input_stroke_color"
                    android:id="@+id/klasha_cardExpiryTil"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:paddingLeft="2dp"
                        android:id="@+id/klasha_cardExpiryTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/klasha_card1"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/expiration"
                        android:inputType="number"
                        android:maxLength="5"
                        android:paddingEnd="50dp"
                        android:paddingRight="50dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:boxBackgroundColor="@null"
                    android:id="@+id/klasha_cvvTil"
                    app:boxStrokeColor = "@color/text_input_stroke_color"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:paddingLeft="2dp"
                        android:id="@+id/klasha_cvvTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/klasha_card1"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/cvc_cvv2"
                        android:imeOptions="actionDone"
                        android:inputType="numberPassword"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

<!--            style="?PayButtonStyle"-->
            <Button
                android:id="@+id/klasha_payButton"
                android:background="@color/klasha_pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="15dp"
                android:text="@string/pay" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E5E5E5"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/black_background_curved"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/secured_by_flutterwave_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="4dp"
                android:letterSpacing="-0.01"
                android:text="@string/secured_by_klasha"
                android:textColor="#F4B918"
                android:textSize="10sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/klasha_pcidss_compliant_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="5dp"
            android:text="@string/pci_dss_compliant"
            android:textSize="12sp" />

<!--        android:drawableStart="@drawable/ic_lock_outline_black_24dp"-->
<!--        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"-->


    </LinearLayout>

</ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

